@@ -1,6 +1,7 @@
 CHANGELOG RoundCube Webmail
 ===========================
 
+- Add 'imap_timeout' option (#1486760)
 - Fix forwarding of messages with winmail attachments
 - Fix handling of uuencoded attachments in message body (#1485839)
 - Added list_mailboxes hook in rcube_imap::list_unsubscribed() (#1486668)
